--- a/view/index.html
+++ b/view/index.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/style.css">
 
     <title>Document</title>
@@ -17,9 +18,16 @@
                 <span>The</span>Cronos
             </div>
             <ul>
-                <li class="nav-menu menu"><a href="">Home</a></li>
-                <li class="nav-menu menu"><a href="">About Us</a></li>
-                <li class="nav-menu menu"><a href="">Contact Us</a></li>
+                <li class="nav-menu hidden">
+                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                        <i class="fa fa-bars"></i>
+                    </a>
+                </li>
+                <div id="myLinks" class="menu">
+                    <li class="nav-menu"><a href="">Home</a></li>
+                    <li class="nav-menu"><a href="">About Us</a></li>
+                    <li class="nav-menu"><a href="">Contact Us</a></li>
+                </div>
             </ul>
         </header>
         <section class="content">
@@ -41,7 +49,7 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, delectus.</p>
                     <a href="" class="btn-detail">View Details</a>
                 </div>
-                <h2>1923+</h2>
+                <h2>200M+</h2>
                 <P>Sold</P>
             </div>
             <div class="item">
@@ -49,7 +57,7 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, delectus.</p>
                     <a href="" class="btn-detail">View Details</a>
                 </div>
-                <h2>1000+</h2>
+                <h2>1.2K+</h2>
                 <P>Curators</P>
             </div>
             <div class="item">
