--- a/view/index.html
+++ b/view/index.html
@@ -19,13 +19,13 @@
             </div>
             <ul>
                 <li class="nav-menu hidden">
-                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <span class="nav-bar">
                         <i class="fa fa-bars"></i>
-                    </a>
+                    </span>
                 </li>
                 <div id="myLinks" class="menu">
                     <li class="nav-menu"><a href="">Home</a></li>
-                    <li class="nav-menu"><a href="">About Us</a></li>
+                    <li class="nav-menu"><a href="#our-services">Services</a></li>
                     <li class="nav-menu"><a href="">Contact Us</a></li>
                 </div>
             </ul>
@@ -72,7 +72,7 @@
     </div>
 
     <div class="out-container">
-        <h1>Our Services</h1>
+        <h1 id="our-services">Our Services</h1>
         <section class="services">
             <div class="service">
                 <img src="../img/service.jpg" alt="">
