--- a/view/index.html
+++ b/view/index.html
@@ -23,10 +23,12 @@
                         <i class="fa fa-bars"></i>
                     </span>
                 </li>
-                <div id="myLinks" class="menu">
-                    <li class="nav-menu"><a href="">Home</a></li>
-                    <li class="nav-menu"><a href="#our-services">Services</a></li>
-                    <li class="nav-menu"><a href="">Contact Us</a></li>
+                <div id="myLinks" class="menu-container">
+                    <div class="menu">
+                        <li class="nav-menu"><a href="">Home</a></li>
+                        <li class="nav-menu"><a href="#our-services">Services</a></li>
+                        <li class="nav-menu"><a href="">Contact Us</a></li>
+                    </div>
                 </div>
             </ul>
         </header>
